--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -14,24 +14,33 @@
 .faceted-navigation {
   position:relative;
 
-&__mobile-facet-container{
-  z-index:9999;
-  background-color: #fff;
-  margin-top: 20px;
-
-  &.enabled{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding:0;
+  &__list {
+    list-style-type: none;
+    padding: 0;
   }
 
-  .b-button{
-    width: 100%;
-    text-align:center;
-    max-width: initial;
+  &__list-item {
+    padding-left: 4px;
   }
-}
+
+  &__mobile-facet-container {
+    z-index: 9999;
+    background-color: $color__white;
+    margin-top: 20px;
+
+    &.enabled {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding:0;
+    }
+
+    .b-button {
+      width: 100%;
+      text-align:center;
+      max-width: initial;
+    }
+  }
 
 .hidden{display:none;}
 .visibile{display:block;}
@@ -108,10 +117,11 @@
     font-size: 18px;
  }
 
- label, &__view-more-values button{
+ label, &__view-more-values {
     font-size: 14px;
     font-weight: normal;
     color: #005EB8;
+    padding-left: 4px;
  }
 
  h4{
