--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-inline.html
@@ -9,7 +9,7 @@
     <form class="eaton-search__form eaton-search--inline__form" data-form-action="${data.form.searchResultsPath}">
       <div class="form-group">
         <label for="mega-menu-search" class="sr-only">${data.header}</label>
-          <input type="text" class="form-control eaton-search--inline__form-input" id="mega-menu-search" placeholder="${data.form.placeholder}">
+          <input type="text" name="search-term" class="form-control eaton-search--inline__form-input" id="mega-menu-search" placeholder="${data.form.placeholder}">
           <button type="submit" class="eaton-search__submit eaton-search--inline__form-submit">
             <span class="sr-only">${data.form.submitLabel}</span>
             <i class="icon icon-search" aria-hidden="true"></i>
