Add Load More Ajax Behavior to Product Grid SKU Component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid-sku/partials/results-list-product-grid.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid-sku/partials/results-list-product-grid.html
@@ -1,6 +1,8 @@
 <template data-sly-template.module="${ @ data }">
 
-  <div class="results-list">
+  <div class="results-list"
+    data-results-url="${ data.ajaxRequestUrl }"
+    data-results-next-page="${ data.ajaxRequestNextPage }">
     <div data-sly-list="${ data.results }"
       class="results-list__content">
       <sly data-sly-use.tpl="partials/product-card-sku.html">
@@ -11,7 +13,9 @@
     <div class="results-list__bottom">
       <div class="results-list__disclaimer">${ '* List Prices are not a reflection of the actual product Stree Price. Check with your Eaton reseller or partner to get actual pricing.' @ i18n }</div>
       <div class="results-list__actions text-center">
-        <button class="b-button b-button__primary b-button__primary--light" role="button">${ 'Load More' @ i18n }</button>
+        <button class="b-button b-button__primary b-button__primary--light"
+          role="button"
+          data-load-more>${ 'Load More' @ i18n }</button>
       </div>
     </div>
   </div>
