--- a/eaton.frontend/src/shared/module-product-tabs/css/module-product-tabs.scss
+++ b/eaton.frontend/src/shared/module-product-tabs/css/module-product-tabs.scss
@@ -213,12 +213,6 @@
     width: 100%;
     position: relative;
 
-    &:focus {
-      .eaton-product-tabs__dropdown__content {
-        display: block;
-      }
-    }
-
     .icon {
       display: inline-block;
       font-size: 14px;
@@ -227,18 +221,17 @@
     }
 
     &__content {
-      display: none;
       position: absolute;
-      width: 100%;
       background-color: $color__secondary-gray6;
-      top: 100%;
-      left: 0;
-      z-index: 10;
-
-      ul {
-        list-style: none;
-        padding: $spacing__sm;
-      }
+      list-style: none;
+      padding: $spacing__sm;
+      top: 77px;
+      left: 50%;
+      margin: 0 auto;
+      border: 0;
+      border-radius: 0;
+      margin-left: -46.5%;
+      width: 93%;
 
       li {
         padding: $spacing__sm 0 0 35px;
@@ -253,6 +246,8 @@
           display: inline-block;
           width: 100%;
           text-align: left;
+          margin: 0;
+          padding: 0;
         }
 
         span {
@@ -323,6 +318,13 @@
       .icon {
         font-size: 1.4rem;
       }
+    }
+
+    .eaton-product-tabs__dropdown__content {
+      top: 97px;
+      left: 50%;
+      margin-left: -50%;
+      width: 100%;
     }
 
     label {
