--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-product-tab.html
@@ -55,19 +55,28 @@
         </div>
 
         <div class="col-md-3 u-text-center eaton-product-tabs__dropdown-container">
-          <button class="eaton-product-tabs__dropdown button--reset">
-            ${data.dropdown.label}
-            <i class="icon icon-chevron-down" aria-hidden="true"></i>
-            <div class="eaton-product-tabs__dropdown__content">
-              <ul data-sly-list="${ data.dropdown.options }">
-                <li>
-                  <a href="#1" aria-label="Go to ${item.title}" >
-                    <i class="icon icon-${item.icon}" aria-hidden="true"></i><span>${item.title}</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </button>
+          <div class="dropdown">
+            <button id="dHowtoBuy"
+                    class="eaton-product-tabs__dropdown button--reset"
+                    type="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false" >
+              ${data.dropdown.label}
+              <i class="icon icon-chevron-down" aria-hidden="true"></i>
+            </button>
+            <ul data-sly-list="${ data.dropdown.options }"
+                class="dropdown-menu eaton-product-tabs__dropdown__content"
+                aria-labelledby="dHowtoBuy" >
+              <li>
+                <a href="${item.href}"
+                   target="${item.target}"
+                   aria-label="Go to ${item.title}" >
+                  <i class="icon icon-${item.icon}" aria-hidden="true"></i><span>${item.title}</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
