--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -58,7 +58,7 @@
                       type="checkbox"
                       id="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }"
                     />
-                    <a href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
+                    <a target="_self" href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
                   </div>
                 </sly>
 
@@ -70,7 +70,7 @@
                       type="radio"
                       id="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }"
                     />
-                    <a href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
+                    <a target="_self" href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
                   </div>
                 </sly>
               </div>
@@ -86,7 +86,7 @@
                 */-->
 
 
-                <!--/* Type: Checkbox */-->
+                <!--/* Type Checkbox */-->
                 <sly data-sly-test="${ item.facetType == 'checkboxes' }">
                   <div class="faceted-navigation__list-item ">
                     <input
@@ -94,7 +94,7 @@
                       type="checkbox"
                       id="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }"
                     />
-                    <a href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
+                    <a target="_self" href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
                   </div>
                 </sly>
 
@@ -107,7 +107,7 @@
                       type="radio"
                       id="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }"
                     />
-                    <a href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
+                    <a target="_self" href="${ facetValue.url }" for="${ 'facet-{0}__{1}' @ format=[ item.facetId, facetValue.id ] }">${ facetValue.label }</a>
                   </div>
                 </sly>
               </div>
