--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
@@ -1,3 +1,5 @@
+.search-results { position: relative; z-index: 1; }
+
 .results-list { padding-bottom: 45px; }
 
 .results-list__disclaimer { border-top: 3px solid #EEF0F2; padding: 20px 0; }
