--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
@@ -3,7 +3,8 @@
         <div class="slick-carousel__slides" data-sly-list="${data}">
             <a href="${item.link}" target="${item.target}" class="slides col-xs-12 ${data.length < 4 ? 'col-sm-4' : 'col-sm-3'}">
                 <div class="col-xs-12 related-products-component__card">
-                    <img class="carousel-component-slide__image" src="${item.image}" alt="${item.image_alt}">
+                    <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}"/>
+
                 </div>
                 <div class="col-xs-12">
                     <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
