EATON-329 - Verify Font of How to Buy Button

--- a/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
+++ b/eaton.frontend/src/global/css/_config/variables/_variables-base.scss
@@ -36,3 +36,5 @@ $base__line-height: 1.5;
 // $font-family__secondary: get-locale-font('font__secondary');
 $font-family__primary: 'Eaton', Arial, sans-serif;
 $font-family__secondary: Arial, 'Arial', sans-serif;
+
+$font-family__primary-bold: 'EatonBold', Arial, sans-serif;
