--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
@@ -88,14 +88,14 @@
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingThree">
+        <div class="panel-heading" role="tab" id="sg-scss-helpers-heading-3">
           <h4 class="panel-title">
             <a class="u-show collapsed" role="button" data-toggle="collapse" data-parent="#sg-scss-helpers-accordion" href="#sg-scss-helpers-pane-3" aria-expanded="false" aria-controls="sg-scss-helpers-pane-3">
               SCSS Mixins
             </a>
           </h4>
         </div>
-        <div id="sg-scss-helpers-pane-3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+        <div id="sg-scss-helpers-pane-3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sg-scss-helpers-heading-3">
           <div class="panel-body">
             TODO: (WIP)
           </div>
@@ -107,10 +107,6 @@
 
     <style>
 
-    .sg-fonts__sample {
-      font-size: 24px;
-      line-height: 1.2;
-    }
 
     </style>
   </div>
