Sending Search Params - AJAX service + debugging search box overlapping with utility nav (while in transition)

--- a/eaton.frontend/src/components/header/css/_header-utility-nav.scss
+++ b/eaton.frontend/src/components/header/css/_header-utility-nav.scss
@@ -95,6 +95,9 @@
   // ----------------------------
 
   @include media-desktop-and-up {
+    position: relative;
+    z-index: 12;
+    
     &__row {
       padding: 0 15px;
     }
