--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
@@ -40,7 +40,7 @@
 
 .eaton-product-tabs--fixed .eaton-product-tabs__tab-panel { padding-top: 390px; }
 
-.eaton-product-tabs--fixed .eaton-product-tabs__buttons { position: fixed; z-index: 2; padding: 0; margin-left: 0; margin-right: 0; }
+.eaton-product-tabs--fixed .eaton-product-tabs__buttons { position: fixed; z-index: 99999; padding: 0; margin-left: 0; margin-right: 0; }
 
 .eaton-product-tabs--fixed .eaton-product-tabs__buttons::after { background-color: inherit; content: ''; height: 149px; left: -50%; position: absolute; top: 0; width: 200%; z-index: -1; }
 
@@ -92,8 +92,9 @@
   .eaton-product-tabs .eaton-product-tabs__dropdown { width: 93%; margin-top: 20px; margin-bottom: 20px; }
   .eaton-product-tabs__page-utility { padding: 0 15px; }
   .eaton-product-tabs .eaton-product-tabs__buttons__center { border-top: 2px solid #EEF0F2; }
-  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 0; left: 0; margin: 0; width: 100%; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 0; left: 0; right: 0; margin: 0; }
   .eaton-product-tabs--fixed .eaton-product-tabs__description { display: none; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__page-utility { margin-top: 274px; }
   .eaton-product-tabs--fixed .eaton-product-tabs__tab-panel { padding-top: 265px; } }
 
 @media screen and (min-width: 992px) { .eaton-product-tabs__dropdown { font-size: 18px; font-family: Arial, "Arial", sans-serif; font-weight: bold; }
@@ -103,6 +104,7 @@
   .eaton-product-tabs label { padding: 4rem 0; }
   .eaton-product-tabs label .icon { font-size: 4rem; }
   .eaton-product-tabs label span { font-size: 1.4rem; }
-  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 84px; margin-left: -15px; margin-right: -15px; } }
+  .eaton-product-tabs--fixed .eaton-product-tabs__buttons { top: 84px; margin-left: -15px; margin-right: -15px; }
+  .eaton-product-tabs--fixed .eaton-product-tabs__page-utility { margin-top: 274px; } }
 
 .aem-AuthorLayer-Edit .eaton-product-tabs__tab-panel, .cq-wcm-edit .eaton-product-tabs__tab-panel { display: block; }
