--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
@@ -1,5 +1,5 @@
 <template data-sly-template.module="${ @ data }">
-    <div class="slick-carousel">
+    <div class="module-related-products slick-carousel">
         <div class="slick-carousel__slides" data-sly-list="${data}">
             <a href="${item.link}" target="${item.target}" class="slides col-xs-12 ${data.length < 4 ? 'col-sm-4' : 'col-sm-3'}">
                 <div class="col-xs-12 related-products-component__card">
