--- a/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/title-text-image-link.scss
@@ -12,6 +12,7 @@
 @import 'views/view-article-feature';
 @import "views/view-page-overview";
 @import 'views/view-card';
+@import 'views/view-topic-link-white';
 
 .title-text-image-link {
   // @include component-spacing(); // Disabled since it creates spacing when used inside column container components
