--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -111,3 +111,25 @@
 .eaton-ttil-card-view__title { margin-bottom: 30px; }
 
 .eaton-ttil-card-view__text { color: #005EB8; text-transform: none; }
+
+.eaton-topic-link-white { overflow: hidden; padding: 40px 0; }
+
+.eaton-topic-link-white__icon { width: 100%; margin-bottom: 30px; }
+
+.eaton-topic-link-white__icon img { width: 60px; height: auto; }
+
+.eaton-topic-link-white__text-wrapper { width: 100%; }
+
+.eaton-topic-link-white__header { margin-bottom: 30px; }
+
+.eaton-topic-link-white__description { margin-bottom: 30px; }
+
+.eaton-topic-link-white__cta-wrapper { text-align: center; }
+
+@media screen and (min-width: 992px) { .eaton-topic-link-white__icon { width: 70px; margin-bottom: 0; margin-right: 30px; display: inline-block; }
+  .eaton-topic-link-white__text-wrapper { width: calc(100% - 100px); display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -ms-flex-align: center; align-items: center; float: right; }
+  .eaton-topic-link-white__text-wrapper.no-icon { width: 100%; }
+  .eaton-topic-link-white__text { width: 70%; -webkit-box-flex: 0; -ms-flex: 0 0 70%; flex: 0 0 70%; }
+  .eaton-topic-link-white__text.no-cta { width: 100%; -webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; }
+  .eaton-topic-link-white__cta-wrapper { width: 30%; -webkit-box-flex: 0; -ms-flex: 0 0 30%; flex: 0 0 30%; text-align: right; }
+  .eaton-topic-link-white__cta-wrapper .b-button__primary { text-align: center; } }
