--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-primary-nav.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/views/view-primary-nav.html
@@ -19,8 +19,8 @@
             </button>
           </div>
 
-          <div class="eaton-search__results">
-            <ul class="eaton-search__result-list" >
+          <div class="eaton-search--default__results">
+            <ul class="eaton-search--default__result-list" >
               <!--/* Result Links will be populated here via AJAX Request /* -->
             </ul>
           </div>
