--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -55,7 +55,7 @@
 
 @media screen and (max-width: 991px) { .header-search { position: fixed; top: 56px; bottom: 0; width: 100%; z-index: 10; } }
 
-@media screen and (min-width: 992px) { .header-search { position: absolute; z-index: 10; } }
+@media screen and (min-width: 992px) { .header-search { position: absolute; z-index: 10; -webkit-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.45); box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.45); } }
 
 .eaton-header { position: relative; z-index: 30; }
 
