--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-pdh.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-pdh.html
@@ -26,93 +26,32 @@
 
                 <!--/* M-45: Table */-->
                 <div class="col-xs-12 col-md-9">
-                    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="headingOne">
-                                <h4 class="panel-title">
-                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Collapsible Group Item #1
-                                    </a>
-                                </h4>
+                    <div data-sly-list="${data.anchors}" class="panel-group secondary-content-accordion" role="tablist" aria-multiselectable="true">
+                        <div class="panel secondary-content-accordion__panel">
+                            <div class="panel-heading secondary-content-accordion__header" role="tab" id="${item.anchorId}" data-toggle="collapse" data-parent="secondary-content-accordion"
+                                 href="#collapse-${itemList.index}" aria-expanded="true" aria-controls="collapse-${itemList.index}">
+                                <i class="secondary-content-accordion__icons icon ${itemList.index == 0 ? 'icon-sign-minus' : 'icon-sign-plus'}"></i>
+                                    <h2 role="button">
+                                        ${item.anchorTitle}
+                                    </h2>
                             </div>
-                            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                                <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="headingTwo">
-                                <h4 class="panel-title">
-                                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Collapsible Group Item #2
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="headingThree">
-                                <h4 class="panel-title">
-                                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        Collapsible Group Item #3
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                                <div class="panel-body">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            <div id="collapse-${itemList.index}" class="panel-collapse collapse ${itemList.index == 0 ? 'in' : ''}" role="tabpanel" aria-labelledby="${item.anchorId}">
+                                <div class="secondary-content-accordion__body">
+                                    <ul data-sly-list.document="${item.content}" class="eaton-download-list__links">
+                                        <li>
+                                            <a href="${document.url}" class="eaton-download-list__item" aria-label="Download ${document.type} for ${ document.title }">
+                                                <i class="icon icon-download" aria-hidden="true"></i>
+                                                <div class="eaton-download-list__document">
+                                                    <span class="eaton-download-list__title">${document.title}<span data-sly-test="${document.isNew}" class="secondary-content-accordion__badge">NEW</span></span>
+                                                    <span class="eaton-download-list__size">(${document.type} ${document.size}, ${document.date})</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--<sly data-sly-list="${ data.anchors }">-->
-                        <!--<div class="module-table" id="${ item.anchorId }">-->
-                            <!--<h3 class="module-table__head b-eyebrow-large">${ item.anchorTitle }</h3>-->
-                            <!--<div class="module-table__body">-->
-                                <!--<sly data-sly-list.row="${ item.content.rows }">-->
-                                    <!--<div class="module-table__row">-->
-                                        <!--<div class="module-table__col b-eyebrow-small">${ row.label }</div>-->
-                                        <!--<div class="module-table__col b-body-copy-small">-->
-
-                                            <!--&lt;!&ndash;/* Print Table Content */&ndash;&gt;-->
-                                            <!--<sly data-sly-list.specValue="${ row.specValue }">-->
-
-                                                <!--&lt;!&ndash;/* if Type == Document */&ndash;&gt;-->
-                                                <!--<div data-sly-test.document="${ specValue.type == 'document' }"-->
-                                                     <!--class="module-table__value value-type-document">${ specValue.text }</div>-->
-
-                                                <!--&lt;!&ndash;/* if Type == Link */&ndash;&gt;-->
-                                                <!--<div data-sly-test.link="${ specValue.type == 'link' }"-->
-                                                     <!--class="module-table__value value-type-link">-->
-                                                    <!--<a href="${ specValue.link.url }" target="${ specValue.link.target }">-->
-                                                        <!--${ specValue.text }-->
-                                                    <!--</a>-->
-                                                <!--</div>-->
-
-                                                <!--&lt;!&ndash;/* if Type == Image */&ndash;&gt;-->
-                                                <!--<div data-sly-test.image="${ specValue.type == 'image' }"-->
-                                                     <!--class="module-table__value value-type-image">-->
-                                                    <!--<a href="${ specValue.link.url }" target="${ specValue.link.target }">-->
-                                                        <!--<img src="${ specValue.imageSrc }" alt="${ specValue.text }" />-->
-                                                    <!--</a>-->
-                                                <!--</div>-->
-
-                                                <!--&lt;!&ndash;/* else Default */&ndash;&gt;-->
-                                                <!--<div data-sly-test="${ !document && !link && !image }"-->
-                                                     <!--class="module-table__value value-type-default">${ specValue.text }</div>-->
-                                            <!--</sly>-->
-
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</sly>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</sly>-->
                 </div>
 
             </div>
