added the new componet intra tab link

--- a/eaton.frontend/src/shared/module-intra-tab-link/css/module-intra-tab-link.scss
+++ b/eaton.frontend/src/shared/module-intra-tab-link/css/module-intra-tab-link.scss
@@ -10,7 +10,7 @@
 
   a {
     font-size: 3.6rem;
-    font-family: $font-family__primary;
+    font-family: $font-family__primary-bold;
   }
 
   @include media-mobile-and-tablet {
