--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-intra-tab-link/css/module-intra-tab-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-intra-tab-link/css/module-intra-tab-link.css
@@ -1,6 +1,6 @@
 .module-intra-tab-link { text-align: center; padding: 90px 0; }
 
-.module-intra-tab-link a { font-size: 3.6rem; font-family: "Eaton", Arial, sans-serif; }
+.module-intra-tab-link a { font-size: 3.6rem; font-family: "EatonBold", Arial, sans-serif; }
 
 @media screen and (max-width: 991px) { .module-intra-tab-link { padding: 60px 0; }
   .module-intra-tab-link a { font-size: 2rem; }
