--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
@@ -1,11 +1,11 @@
-.secondary-content-accordion { position: relative; }
+.secondary-content-accordion__header { padding: 30px 0 0; position: relative; }
 
-.secondary-content-accordion__header { padding-left: 0; }
+.secondary-content-accordion__panel { border-bottom: 3px solid #EEF0F2; }
 
-.secondary-content-accordion__panel { border-bottom: 4px solid #EEF0F2; }
+.secondary-content-accordion__download-icon .icon { color: #005EB8; font-size: 1.5rem; margin-right: 20px; }
 
 .secondary-content-accordion__badge { background-color: #ED8B00; color: #FFF; padding: 6px 10px; font-size: 1.125rem; bottom: 7px; position: relative; left: 10px; }
 
 .secondary-content-accordion__body { padding-bottom: 50px; }
 
-.secondary-content-accordion__icons { position: absolute; right: 0; color: #005EB8; font-size: 2.25rem; }
+.secondary-content-accordion__icons { position: absolute; right: 0; color: #005EB8; font-size: 2.25rem; bottom: 10px; }
