--- a/eaton.frontend/src/components/resource-list/css/resource-list.scss
+++ b/eaton.frontend/src/components/resource-list/css/resource-list.scss
@@ -2,15 +2,20 @@
 @import "../../../global/css/_config/sass";
 
 .secondary-content-accordion{
-
-  position: relative;
   
   &__header {
-    padding-left: 0;
+    padding: 30px 0 0;
+    position: relative;
   }
 
   &__panel {
-    border-bottom: 4px solid $color__secondary-gray5;
+    border-bottom: 3px solid $color__secondary-gray5;
+  }
+
+  &__download-icon .icon {
+    color: $color__primary-blue;
+    font-size: 1.5rem;
+    margin-right: 20px;
   }
 
   &__badge {
@@ -32,5 +37,6 @@
     right: 0;
     color: $color__primary-blue;
     font-size: 2.25rem;
+    bottom: 10px;
   }
 }
