--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-pdh.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-pdh.html
@@ -1,61 +1,5 @@
 <sly data-sly-use.data="${ '../data/view-pdh-data.js' @testdata=properties.testdata }">
-
-    <div class="product-specifications">
-        <div class="container">
-            <div class="row">
-
-                <!--/* M-39: Anchor Links */-->
-                <div class="col-xs-12 col-md-3">
-                    <div class="module-anchor-links">
-                        <ul class="module-anchor-links__list">
-                            <sly data-sly-list="${ data.anchors }">
-                                <li class="module-anchor-links__list-item b-body-copy-small">
-                                    <!--/* NOTE: data-scroll-to="#element-id" is a CSS Selector (Class, ID) */-->
-                                    <button
-                                            data-scroll-to="#${ item.anchorId }"
-                                            data-scroll-to-offset-enabled="true"
-                                            class="module-anchor-links__list-link button--reset">
-                                        <span>${ item.anchorTitle }</span>
-                                        <i class="icon icon-chevron-right" aria-hidden="true"></i>
-                                    </button>
-                                </li>
-                            </sly>
-                        </ul>
-                    </div>
-                </div>
-
-                <!--/* M-45: Table */-->
-                <div class="col-xs-12 col-md-9">
-                    <div data-sly-list="${data.anchors}" class="panel-group secondary-content-accordion" role="tablist" aria-multiselectable="true">
-                        <div class="panel secondary-content-accordion__panel">
-                            <div class="panel-heading secondary-content-accordion__header" role="tab" id="${item.anchorId}" data-toggle="collapse" data-parent="secondary-content-accordion"
-                                 href="#collapse-${itemList.index}" aria-expanded="true" aria-controls="collapse-${itemList.index}">
-                                <i class="secondary-content-accordion__icons icon ${itemList.index == 0 ? 'icon-sign-minus' : 'icon-sign-plus'}"></i>
-                                    <h2 role="button">
-                                        ${item.anchorTitle}
-                                    </h2>
-                            </div>
-                            <div id="collapse-${itemList.index}" class="panel-collapse collapse ${itemList.index == 0 ? 'in' : ''}" role="tabpanel" aria-labelledby="${item.anchorId}">
-                                <div class="secondary-content-accordion__body">
-                                    <ul data-sly-list.document="${item.content}" class="eaton-download-list__links">
-                                        <li>
-                                            <div class="eaton-download-list__item secondary-content-accordion__download-icon">
-                                                <i class="icon icon-download" aria-hidden="true"></i>
-                                                <div class="eaton-download-list__document">
-                                                    <a href="${document.url}" aria-label="Download ${document.type} for ${ document.title }" class="b-h5-link">${document.title}<span data-sly-test="${document.isNew}" class="secondary-content-accordion__badge">NEW</span></a>
-                                                    <span class="b-body-copy-small eaton-download-list__size">(${document.type} ${document.size}, ${document.date})</span>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
+    <sly data-sly-use.tpl="../../shared/templates/module-resource-list.html">
+        <sly data-sly-call="${ tpl.module @data=data }"></sly>
+    </sly>
 </sly>
