--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-tags.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/resource-list/views/view-tags.html
@@ -1,16 +1,5 @@
-<div class="product-support-component" data-sly-use.data="${'../data/view-tags-data.js' @testdata=properties.testdata}">
-    <div class="row">
-        <div class="product-support-component--left col-xs-12 col-sm-10 col-sm-offset-2 col-lg-4 col-lg-offset-2">
-            <i class="product-support-component__icon icon icon-help"></i>
-            <div class="product-support-component__text">
-                <h3>${data.title}</h3>
-                <p class="b-body-copy">${data.copy}</p>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-10 col-sm-offset-2 col-lg-5 col-lg-offset-0">
-            <div class="product-support-component__info">
-                <div class="product-support-component__info--text">${data.info @ context = 'html'}</div>
-            </div>
-        </div>
-    </div>
-</div>
+<sly data-sly-use.data="${ '../data/view-tags-data.js' @testdata=properties.testdata }">
+    <sly data-sly-use.tpl="../../shared/templates/module-resource-list.html">
+        <sly data-sly-call="${ tpl.module @data=data }"></sly>
+    </sly>
+</sly>
