Debug - Search not working in Header (fix the missing data params)

--- a/eaton.frontend/src/components/search-box/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-primary-nav.scss
@@ -50,7 +50,9 @@
       display: block;
       padding: 10px 0;
       color: $color__white;
-      &:hover, &:focus {
+
+      &:hover,
+      &:focus {
         color: $color__white;
       }
     }
