--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-primary-nav.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-primary-nav.html
@@ -1,4 +1,4 @@
-<template data-sly-template.primaryNavigation="${ @ data }">
+<sly data-sly-use.data="${'../data/view-primary-nav-data.js' @testdata=properties.testdata}">
     <div class="eaton-link-list-primary-nav ${data.backgroundImage ? 'eaton-link-list-primary-nav--has-background' : ''}"  style="background-image: url('${data.backgroundImage @ context = 'uri'}')">
       <!--/* Headline: Visible only for Mobile Breakpoints */-->
       <div data-sly-test="${data.headline}" class="eaton-link-list-primary-nav__headline">
@@ -17,4 +17,4 @@
         </nav>
       </div>
     </div>
-</template>
+</sly>
